# ocr_app2

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ocr_app/: MANIFEST.in  __init__.py  api.py  hooks.py  modules.txt
ocr_app/public/js/: purchase_receipt.js
