[project]
name = "ocr_app"
authors = [
    { name = "lmc", email = "sanketshelar2002@gmail.com"}
]
description = "Ocr App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0",# Installed and managed by bench.
    "pytesseract~=0.3.10",
    "Pillow~=9.0.1",
    "opencv-python-headless~=4.5.5"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
